Fix compile script, action, and downgrade tempalte
The template relied on a feature of pandoc that's only in more
recent versions, namely `elseif`, which doesn't work on 2.5,
the version that I'm able to install easily on GitHub actions.

The change to the action installs pandoc and runs the same
script I use locally.

The script is cleaned up according to feedback from shellcheck,
and in the last version I removed checks that it's running in
the correct directory since the goal now is to automate it.

--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -7,16 +7,20 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  CompileHtml:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Install pandoc
-      run: apt install -y pandoc
+      run: apt update && apt install -y pandoc
     - name: Compile html
-      working-directory: './'
       run: ./compile.sh
     - name: Push code
       uses: actions-x/commit@v2
+      with:
+        name: arlindohall
+        email: hall@hey.com
+        branch: main
+        files: posts index.html posts.html
