--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Install pandoc
-      run: apt update && apt install -y pandoc
+      run: sudo apt update && sudo apt install -y pandoc
     - name: Compile html
       run: ./compile.sh
     - name: Push code
