Copy events version file to halt job if code is the same

--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -23,4 +23,4 @@ jobs:
         name: arlindohall
         email: hall@hey.com
         branch: main
-        files: events
+        files: events EVENTS_VERSION
